<resources>
    <string name="app_name">NTGEmployeeIOSystem</string>
    <string name="time_sheet_string">Time Sheet</string>
    <string name="sign_out_string">Sign Out</string>
    <string-array name="Team">
        <item>Mobile</item>
        <item>IT</item>
        <item>Backend</item>
        <item>Testing</item>
    </string-array>

    <string-array name="accepted_MAC">
        <item>00:fe:c8:36:9f:31</item>
        <item>00:fe:c8:55:92:41</item>
        <item>01:80:c2:00:00:03</item>
        <item>1e:65:9d:c9:e3:88</item>
    </string-array>

    <string name="team">Team</string>
    <string name="employee_name_et_hint">Employee Name</string>
    <string name="register_now_btn_text">Register Now</string>
    <string name="ntg_email_et_hint">NTG Email</string>
    <string name="registration_image_cd">Registration Image</string>
    <string name="login_string">Login</string>
    <string name="password_string">Password</string>
    <string name="create_account_string"><u>create account</u></string>
    <string name="already_have_account_login">already have account? <u>Login</u></string>
</resources>
