<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="133dp"
        android:layout_height="124dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/registration_image_cd"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/employee_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_btn_background"
        android:drawableStart="@drawable/profile"
        android:hint="@string/employee_name_et_hint"
        android:maxLines="1"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textColor="#FFFF"
        android:textColorHint="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <TextView
        android:id="@+id/choose_team_text_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_btn_background"
        android:drawableEnd="@drawable/ic_action_name"
        android:drawableStart="@drawable/team"
        android:gravity="center_vertical"
        android:hint="@string/team"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:spinnerMode="dropdown"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <Button
        android:id="@+id/register_now_button"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_btn_background"
        android:text="@string/register_now_btn_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/choose_team_text_view" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_btn_background"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/ntg_email_et_hint"
        android:inputType="textEmailAddress"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/employee_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/employee_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/employee_name_edit_text" />


</android.support.constraint.ConstraintLayout>